--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto Mono', monospace;
+    margin: 0px;
 }
 h1{
     font-size: 40px;
@@ -8,12 +9,20 @@ h1{
     color: orange;
 }
 .half-width{
-    width:35%;
+    width:40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
 .half-width img{
     width: 100%;
+
+}
+.top-banner{
+    background-image: url("Images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
 
 }
