--- a/style.css
+++ b/style.css
@@ -5,11 +5,17 @@ body{
 h1{
     font-size: 40px;
 }
+h2{
+    font-size: 33px;
+}
+p{
+    color: dimgray;
+}
 .Name-highlight{
     color: orange;
 }
 .half-width{
-    width:40%;
+    width:35%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
@@ -24,5 +30,50 @@ h1{
 }
 section{
     height: 500px;
+    padding-bottom: 120px;
 
 }
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 700;
+}
+.dream-area{
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 70%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url(exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+   border-image: linear-gradient(lightsalmon, tomato);
+   border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+.justify{
+    text-align: center;
+}
+footer p{
+    text-align: center;
+    font-size: 10px;
+    font-weight: bold;
+
+}
+
